--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "type": "yarn tsc --noEmit",
     "lint": "eslint --ext ts,tsx ./*.ts ./src",
     "lint-json": "prettier -c ./*.json",
     "lint-style": "prettier -c ./src/**/*.css",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^0.34.1"
   }
 }
